; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_audio.c_libvlc_audio_get_volume.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_audio.c_libvlc_audio_get_volume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libvlc_audio_get_volume(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca float, align 4
  store i32* %0, i32** %2, align 8
  store i32 -1, i32* %3, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @GetAOut(i32* %6)
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = call float @aout_VolumeGet(i32* %11)
  store float %12, float* %5, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @aout_Release(i32* %13)
  %15 = load float, float* %5, align 4
  %16 = fmul float %15, 1.000000e+02
  %17 = call i32 @lroundf(float %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %10, %1
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32* @GetAOut(i32*) #1

declare dso_local float @aout_VolumeGet(i32*) #1

declare dso_local i32 @aout_Release(i32*) #1

declare dso_local i32 @lroundf(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
